// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TruncateMiddleDynamic > should render 1`] = `
<DocumentFragment>
  <span>
    <span>
      <span
        class="no-ligatures min-w-0 overflow-hidden"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit.
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should return the value if it fits the given container 1`] = `
<DocumentFragment>
  <span
    class="no-ligatures min-w-0 overflow-hidden"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should return the value if it overflows the given container 1`] = `
<DocumentFragment>
  <span
    class="no-ligatures min-w-0 overflow-hidden"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should return the value if the elements have no width 1`] = `
<DocumentFragment>
  <span>
    <span>
      <span
        class="no-ligatures min-w-0 overflow-hidden"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit.
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should truncate value if doesn't overflow and availableWidth is set 1`] = `
<DocumentFragment>
  <span>
    <span>
      <span
        class="no-ligatures min-w-0 overflow-hidden"
      >
        L….
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic > should truncate value if it overflows and availableWidth is set 1`] = `
<DocumentFragment>
  <span>
    <span>
      <span
        class="no-ligatures min-w-0 overflow-hidden"
      >
        D…b
      </span>
    </span>
  </span>
</DocumentFragment>
`;
